fix LESS to banish horizontal scroll bar.

--- a/LESS/index.less
+++ b/LESS/index.less
@@ -7,11 +7,18 @@
 body {
 	background-color: @background-color;
 	color: @content-font-color;
-	width: 500px;
-	max-width: 100%;
 	margin: 0 auto;
 	font-size: 1.6rem;
 }
+
+.page-wrapper {
+	display: flex;
+	flex-flow: column;
+	align-items: center;
+	width: 500px;
+	max-width: 100%;
+}
+
 
 .banner {
 	background-attachment: scroll,	fixed;
@@ -21,12 +28,6 @@ body {
     padding: 6rem 0 1rem 0;
 	text-align: center;
 	width: 100%;
-}
-
-.page-wrapper {
-	display: flex;
-	flex-flow: column;
-	align-items: center;
 }
 
 .banner img {
@@ -53,10 +54,6 @@ body {
 // @media tablet
 // width X%
 
-.main-content {
-	width: 100%;
-}
-
 .about {
 	width: 100%;
 	display: flex;
@@ -71,12 +68,11 @@ body {
 
 .about img {
 	width: 100%;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+	.round-imgs();
 }
 
 .about h1 {
-	width: 85%;
+	width: 90%;
 	margin-top: 3rem;
 	padding-bottom: 2rem;
 	font-size: 2.5rem;
@@ -86,7 +82,7 @@ body {
 
 .about p {
 	margin-top: 2rem;
-	margin-bottom: 3rem;
+	margin-bottom: 4rem;
 }
 
 .box-container {
@@ -102,7 +98,6 @@ body {
 }
 
 .box-container h3 {
-	width: 100%;
 	margin-top: 3rem;
 	padding-bottom: 2rem;
 	font-size: 2rem;
@@ -115,6 +110,34 @@ body {
 
 .box-container img {
 	width: 100%;
-	border-bottom-left-radius: 15px;
-	border-bottom-right-radius: 15px;
+	.round-imgs()
+}
+
+.bottom-img {
+	margin-top: 3rem;
+	width: 100%;
+	border-radius: 15px;
+}
+
+.cta {
+	display: flex;
+	flex-flow: column wrap;
+	align-items: center;
+	align-content: center;
+}
+
+.cta h2 {
+	margin: 4rem 0;
+	font-size: 2rem;
+}
+
+.cta a {
+	width: 100%;
+	margin: 0 auto;
+	text-align: center;
+}
+
+.cta button {
+	.button (@btnbc, @btncolor, @hoverbc, @hovercolor, 85%);
+	margin-bottom: 3rem;
 }
