--- a/LESS/mixins.less
+++ b/LESS/mixins.less
@@ -14,3 +14,8 @@
         color: @hvrclr;
     }
 }
+
+.round-imgs {
+    border-bottom-left-radius: 15px;
+	border-bottom-right-radius: 15px;
+}
